# oop-2023

./: README.md
c-intro/: CMakeLists.txt  README.md  main.c
chat-app/: CMakeLists.txt  README.md  chat_session.h  chat_window.cpp  chat_window.h  main.cpp  message.h  observer.h  statistics.h  user.h
seminar2/: CMakeLists.txt  README.md  country.c  country.h  list.c  list.h  main.c  service.c  service.h
seminar3/: CMakeLists.txt  README.md  main.cpp
seminar4/: CMakeLists.txt  README.md  main.cpp  tlist.h
seminar5/: CMakeLists.txt
seminar5_212/: CMakeLists.txt  README.md  main.cpp  post.h  posts_ui.cpp  posts_ui.h  repository.h  service.h
seminar6-chat/: CMakeLists.txt  chat_session.h  chat_window.h  main.cpp  message.h  observer.h  statistics.h  user.h
seminar7-2/: CMakeLists.txt  chat_window.h  custom_model.h  main.cpp  message.h  user.h
simulation-practice/: CMakeLists.txt  car.h  main.cpp  repository.h  service.h  test_cars.txt  tests.h  ui.h
